/*
 * This file was automatically generated by EvoSuite
 * Mon Dec 03 23:13:35 GMT 2018
 */

package system.controller.service.database;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.runtime.EvoAssertions.*;
import java.util.HashMap;
import java.util.HashSet;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.junit.runner.RunWith;
import system.controller.service.database.StringDatabaseEntry;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class StringDatabaseEntry_ESTest extends StringDatabaseEntry_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test0()  throws Throwable  {
      Object object0 = StringDatabaseEntry.__CLR4_1_27v7vjp8v54ma.lambdaInc((-380), "", (-663));
      assertNotNull(object0);
  }

  @Test(timeout = 4000)
  public void test1()  throws Throwable  {
      StringDatabaseEntry.__CLR4_1_27v7vjp8v54ma stringDatabaseEntry___CLR4_1_27v7vjp8v54ma0 = new StringDatabaseEntry.__CLR4_1_27v7vjp8v54ma();
  }

  @Test(timeout = 4000)
  public void test2()  throws Throwable  {
      system.controller.service.database.StringDatabaseEntry stringDatabaseEntry0 = null;
      try {
        stringDatabaseEntry0 = new system.controller.service.database.StringDatabaseEntry((HashSet<String>) null);
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("system.controller.service.database.StringDatabaseEntry", e);
      }
  }

  @Test(timeout = 4000)
  public void test3()  throws Throwable  {
      system.controller.service.database.StringDatabaseEntry stringDatabaseEntry0 = new system.controller.service.database.StringDatabaseEntry((HashMap<String, String>) null);
      // Undeclared exception!
      try { 
        stringDatabaseEntry0.getFieldNames();
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("system.controller.service.database.StringDatabaseEntry", e);
      }
  }

  @Test(timeout = 4000)
  public void test4()  throws Throwable  {
      system.controller.service.database.StringDatabaseEntry stringDatabaseEntry0 = new system.controller.service.database.StringDatabaseEntry((HashMap<String, String>) null);
      String string0 = stringDatabaseEntry0.toString();
      assertEquals("StringDatabaseEntry{content=null}", string0);
  }

  @Test(timeout = 4000)
  public void test5()  throws Throwable  {
      system.controller.service.database.StringDatabaseEntry stringDatabaseEntry0 = new system.controller.service.database.StringDatabaseEntry((HashMap<String, String>) null);
      // Undeclared exception!
      try { 
        stringDatabaseEntry0.getField("m7$6*|&0k!");
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("system.controller.service.database.StringDatabaseEntry", e);
      }
  }

  @Test(timeout = 4000)
  public void test6()  throws Throwable  {
      system.controller.service.database.StringDatabaseEntry stringDatabaseEntry0 = new system.controller.service.database.StringDatabaseEntry((HashMap<String, String>) null);
      HashMap<String, String> hashMap0 = stringDatabaseEntry0.getFields();
      assertNull(hashMap0);
  }
}
