@startuml

title __DATABASE's Class Diagram__\n

  package system.controller {
    package system.controller.service {
      package system.controller.service.database {
        class IntStringBlobDatabaseEntry_ESTest {
            + test0()
            + test1()
            + test2()
            + test3()
            + test4()
        }
      }
    }
  }
  

  package system.controller {
    package system.controller.service {
      package system.controller.service.database {
        class IntStringBlobDatabaseEntry_ESTest_scaffolding {
            + nfr : NonFunctionalRequirementRule
            {static} - defaultProperties : Properties
            - threadStopper : ThreadStopper
            {static} + initEvoSuiteFramework()
            {static} + clearEvoSuiteFramework()
            + initTestCase()
            + doneWithTestCase()
            {static} + setSystemProperties()
            {static} - initializeClasses()
            {static} - resetClasses()
        }
      }
    }
  }
  

  package system.controller {
    package system.controller.service {
      package system.controller.service.database {
        class MySQLDatabaseService_ESTest {
            + test0()
            + test1()
            + test2()
            + test3()
        }
      }
    }
  }
  

  package system.controller {
    package system.controller.service {
      package system.controller.service.database {
        class MySQLDatabaseService_ESTest_scaffolding {
            + nfr : NonFunctionalRequirementRule
            {static} - defaultProperties : Properties
            - threadStopper : ThreadStopper
            {static} + initEvoSuiteFramework()
            {static} + clearEvoSuiteFramework()
            + initTestCase()
            + doneWithTestCase()
            {static} + setSystemProperties()
            {static} - initializeClasses()
            {static} - initMocksToAvoidTimeoutsInTheTests()
            {static} - resetClasses()
        }
      }
    }
  }
  

  package system.controller {
    package system.controller.service {
      package system.controller.service.database {
        class StringDatabaseEntry_ESTest {
            + test0()
            + test1()
            + test2()
            + test3()
            + test4()
            + test5()
            + test6()
        }
      }
    }
  }
  

  package system.controller {
    package system.controller.service {
      package system.controller.service.database {
        class StringDatabaseEntry_ESTest_scaffolding {
            + nfr : NonFunctionalRequirementRule
            {static} - defaultProperties : Properties
            - threadStopper : ThreadStopper
            {static} + initEvoSuiteFramework()
            {static} + clearEvoSuiteFramework()
            + initTestCase()
            + doneWithTestCase()
            {static} + setSystemProperties()
            {static} - initializeClasses()
            {static} - resetClasses()
        }
      }
    }
  }
  

  IntStringBlobDatabaseEntry_ESTest -up-|> IntStringBlobDatabaseEntry_ESTest_scaffolding
  MySQLDatabaseService_ESTest -up-|> MySQLDatabaseService_ESTest_scaffolding
  StringDatabaseEntry_ESTest -up-|> StringDatabaseEntry_ESTest_scaffolding


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
